--- a/wikl-java/pom.xml
+++ b/wikl-java/pom.xml
@@ -19,6 +19,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.avro</groupId>
+            <artifactId>avro</artifactId>
+            <version>1.8.2</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 
