--- a/wikl-neo4j/neo4j-jdbc/src/main/resources/application.yml
+++ b/wikl-neo4j/neo4j-jdbc/src/main/resources/application.yml
@@ -6,24 +6,38 @@ server:
 spring:
   application:
     name: neo4j-jdbc
+  cloud:
+    loadbalancer:
+      ribbon:
+        enabled: false
+
   servlet:
     multipart:
       #springboot 2.1 后增加 DataSize ,用来避免数据曝光
       max-file-size: 104857600
       max-request-size: 524288000
+  security:
+    user:
+      name: admin
+      password: admin
 
 #存储相关配置
 storage:
   neo4j:
-    url: bolt://10.0.43.151:7687
+    url: bolt://localhost:11005
     userName: neo4j
     password: 123456
 
-## 注册的服务地址 和Eureka Server一样
+
 eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-  # 这只为prefer ip的话可以直接展示ip地址
   instance:
     prefer-ip-address: true
+    hostname: localhost
+  client:
+    service-url:
+      defaultZone: http://${spring.security.user.name}:${spring.security.user.password}@${eureka.instance.hostname}:8761/eureka/
+
+#日志配置
+logging:
+  level:
+    root: info
